[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Gobbo.tscn" type="PackedScene" id=2]
[ext_resource path="res://try.png" type="Texture" id=3]
[ext_resource path="res://Gobbo.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://tile set01.png" type="Texture" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 43.5299, 13.54 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 1589.98, 10 )

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 15.1348
height = 23.7087

[node name="Main" type="Node" index="0"]
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
Gobbo = ExtResource( 2 )
platform = null

[node name="Background1" type="Sprite" parent="." index="0"]
position = Vector2( 79.9153, 83.6334 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1538, 862 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Background2" type="Sprite" parent="." index="1"]
position = Vector2( 1101.24, 82.6335 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1538, 862 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Background3" type="Sprite" parent="." index="2"]
position = Vector2( 2170.93, 81.27 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1538, 862 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="StartPosition" type="Position2D" parent="." index="3"]
position = Vector2( 50, 250 )
_sections_unfolded = [ "Transform" ]

[node name="gobbo" type="Area2D" parent="." index="4"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Material", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="gobboChild" type="Area2D" parent="gobbo" index="0" instance=ExtResource( 2 )]
position = Vector2( 110.29, 276.713 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility" ]
speed = null

[node name="TitleScreen" parent="." index="5" instance=ExtResource( 5 )]

[node name="platform" type="StaticBody2D" parent="." index="6"]
position = Vector2( 292.297, 246.644 )
input_pickable = false
collision_layer = 1
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Audio Bus", "Collision" ]

[node name="Sprite" type="Sprite" parent="platform" index="0"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform" index="1"]
position = Vector2( -4.00525, -8.23638 )
shape = SubResource( 1 )

[node name="floor" type="StaticBody2D" parent="." index="7"]
position = Vector2( 1129.32, 313.988 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor" index="0"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="8"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Player" parent="Area2D" index="0" instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 50, 248 )
scale = Vector2( 1, 1 )
collision_layer = 2
collision_mask = 13
_sections_unfolded = [ "Audio Bus", "Collision", "Pickable", "Transform" ]
SPEED = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="1"]
position = Vector2( 49.2512, 246.991 )
shape = SubResource( 3 )

[connection signal="start_game" from="TitleScreen" to="." method="new_game"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="hit" from="Area2D/Player" to="." method="_on_Player_hit"]

[editable path="Area2D/Player"]
